# tongue-simulator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
assets/: index--i2YTuxd.css  index-CqXIzO5r.js  index-CuFawLP6.js  index-DIu9imL9.js  index-DN8fGdo2.js  index-MDfxzwqP.js  tongue_sim-BR6QG6eR.js  tongue_sim-DjqFOrBM.js  tongue_sim_bg-B_dWrGPR.wasm  tongue_sim_bg-Rje7kbwu.wasm
crates/tongue-sim/: Cargo.toml
crates/tongue-sim/data/: cmudict_compact.json  phoneme_targets.json
crates/tongue-sim/src/: api.rs  lib.rs
crates/tongue-sim/src/airflow/: mod.rs  particles.rs
crates/tongue-sim/src/anatomy/: defaults.rs  mod.rs
crates/tongue-sim/src/g2p/: cmudict.rs  fallback.rs  mod.rs
crates/tongue-sim/src/gestures/: blending.rs  mod.rs  tiers.rs  timeline.rs
crates/tongue-sim/src/phoneme/: durations.rs  mod.rs  targets.rs
crates/tongue-sim/src/physics/: collisions.rs  mesh.rs  mod.rs  muscles.rs  pbd.rs  rigid_bodies.rs
crates/tongue-sim/tests/: g2p_tests.rs  physics_tests.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: PlaybackControls.tsx  SettingsPanel.tsx  TextInput.tsx  TranscriptOverlay.tsx  VocalTractCanvas.tsx  VoiceSelector.tsx
web/src/hooks/: useAnimationLoop.ts  useSimulator.ts  useSyncController.ts  useTTS.ts
web/src/renderer/: colors.ts  drawAirflow.ts  drawTongue.ts  drawTract.ts
web/src/types/: simulation.ts
web/src/utils/: spline.ts  timing.ts
web/src/wasm/: loader.ts
